# Voyager-DiscordAPI

./: .env  Cargo.toml  Makefile.toml  README.md  rustfmt.toml
.fleet/: run.json
src/: main.rs
src/commands/: help.rs  mod.rs  utils.rs
src/commands/deployment/: create.rs  get.rs  logs.rs  mod.rs
src/commands/deployments/: list.rs  mod.rs  new.rs
src/commands/deployments/deployment/: delete.rs  get.rs  logs.rs  mod.rs
src/commands/users/: invite.rs  mod.rs
src/services/: mod.rs
src/services/shared_api/: mod.rs  send_invite.rs
src/services/voyager_api/: delete.rs  get.rs  mod.rs  post.rs
src/types/: mod.rs
src/types/voyager_api/: deployment.rs  deployment_delete_result.rs  deployment_get_result.rs  deployment_logs_result.rs  deployment_result.rs  deployments_get_result.rs  mod.rs
src/utils/: ensure_success.rs  handle_reply.rs  mod.rs
src/utils/http_client/: deserializable.rs  http_client.rs  mod.rs
