[package]
name = "pinkcloud_api_bot"
version = "0.1.0"
authors = ["Elaina <elaina@pinkcloud.studio>"]
edition = "2021"

[dependencies]
poise = "^0.6"
dotenv = "^0.15"
tokio = { version = "^1.36", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "^0.11", features = ["blocking", "json"] }
serde = "^1.0"
serde_json = "^1.0"
serde_url_params = "^0.2"
lazy_static = "^1.4"
url = "^2.5"
paste = "^1.0"
color-eyre = "^0.6"
tracing-subscriber = "^0.3"
tracing = "^0.1"
